<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.michielboswijk.ghostwordgame.GamePlay">

    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_intro"
        android:title="@string/action_intro"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restart"
        android:title="@string/action_restart"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_names"
        android:title="@string/action_names"
        android:orderInCategory="250"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_highscores"
        android:title="@string/action_highscores"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_htp"
        android:title="@string/action_htp"
        android:orderInCategory="500"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_ack"
        android:title="@string/action_ack"
        android:orderInCategory="600"
        app:showAsAction="never" />


</menu>
