<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.michielboswijk.ghostwordgame.NameInput">

    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_intro"
        android:title="@string/action_intro"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_htp"
        android:title="@string/action_htp"
        android:orderInCategory="400"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_ack"
        android:title="@string/action_ack"
        android:orderInCategory="500"
        app:showAsAction="never" />

</menu>
