<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="5dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".IntroScreen"
    android:background="#222222">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="0.6"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/layout_bg">

        <ImageView
            android:contentDescription="@string/ghost_image_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ghost"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/first_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/intro_title_1"
                android:textSize="60sp"
                android:textColor="@color/green"
                android:gravity="center"
                android:paddingTop="30dp"
                />

            <TextView
                android:id="@+id/second_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/intro_title_2"
                android:paddingTop="10dp"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:textColor="@color/green"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.4"
        android:layout_height="0dp"
        android:layout_margin="14dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp">

            <ImageView
                android:contentDescription="@string/play_button_descr"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/play"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="startNameInput"/>

            <ImageView
                android:contentDescription="@string/settings_button_descr"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/gear"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:onClick="startSettings"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:contentDescription="@string/highscores_button_descr"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/highscores"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="startHighscores"/>

            <ImageView
                android:contentDescription="@string/info_button_descr"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/info"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:onClick="startHowToPlay"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>