<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.michielboswijk.ghostwordgame.GamePlay"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/p1_display"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:text="@string/layout_p1_placeholder"/>

            <TextView
                android:id="@+id/p2_display"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:gravity="end"
                android:text="@string/layout_p2_placeholder"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/gameplay_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/green">

        </LinearLayout>

        <RelativeLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background2">

            <TextView
                android:id="@+id/game_word"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/green"
                android:text="@string/layout_word_placeholder"
                android:gravity="center"
                android:textSize="35sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_field"
                android:ellipsize="start"
                android:inputType="text"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_button_text"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:onClick="enterLetter"/>

    </LinearLayout>

</LinearLayout>
