<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.michielboswijk.ghostwordgame.Settings"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/grey">

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/layout_language"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"/>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/colored_line1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/green"
                android:layout_gravity="center_vertical">

            </LinearLayout>


        </LinearLayout>

        <ToggleButton
            android:id="@+id/language_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="EN"
            android:textOn="NL"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/grey">

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/layout_theme"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"/>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/colored_line2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/green"
                android:layout_gravity="center_vertical">

            </LinearLayout>


        </LinearLayout>

        <ToggleButton
            android:id="@+id/theme_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="Green"
            android:textOn="Orange"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/grey">

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/layout_history"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"/>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/colored_line4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/green"
                android:layout_gravity="center_vertical">

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_button_text"
            android:layout_gravity="center"
            android:onClick="clearAll"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</LinearLayout>
